[tool.poetry]
name = "modbus2mqtt"
version = "0.0.1"
description = ""
authors = [
	"Tobias Müller <Tobias_Mueller@twam.info>"
]
license = "MIT"

[tool.poetry.scripts]
modbus2mqtt = 'modbus2mqtt.modbus2mqtt:main'

[tool.poetry.dependencies]
python="^3.11"
PyYAML="^6.0"
paho-mqtt="<2" # asyncio-mqtt isn't working with 2, yet
aiomqtt="^2.0.0"
pymodbus="^3.6.6"
construct="^2.10.70"

[tool.poetry.dev-dependencies]
ruff = "*"
pytest = "*"
pytest-mock = "*"
pytest-asyncio = "*"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.ruff]
line-length = 140

[tool.ruff.lint]
# "ANN", 
select = ["F", "E", "W", "I", "N", "UP", "YTT", "ASYNC", "BLE", "FBT", "B", "COM", "C4", "DTZ", "EM", "EXE", "FA", "ISC", "ICN", "LOG", "G", "INP", "PIE", "PT", "Q", "RSE", "RET", "SLF", "SLOT", "SIM", "TID", "INT", "ARG", "PTH", "FIX", "ERA", "NPY", "RUF"]
ignore = ["EXE002", "G004"]


[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

#[pytest]
#asyncio_mode = auto